best-practices/require-drop-all/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-drop-all
policies:
- ../require-drop-all.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: drop-all-capabilities
  resources:
  - add-capabilities-bad
  result: fail
  rule: require-drop-all
- kind: Pod
  policy: drop-all-capabilities
  resources:
  - add-capabilities
  result: pass
  rule: require-drop-all
